@@ -90,7 +90,7 @@ void xfs::Set_Used_Sectors( Partition & partition )
 
 bool xfs::Create( const Glib::ustring device_path, const Partition & new_partition )
 {
-	return ! Execute_Command( "mkfs.xfs " + new_partition .partition ) ;
+	return ! Execute_Command( "mkfs.xfs -f " + new_partition .partition ) ;
 }
 
 bool xfs::Resize( const Partition & partition_new, bool fill_partition )
