@@ -1,3 +1,10 @@
+2004-12-18 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/Dialog_Filesystems.h,
+	  src/Dialog_Filesystems.cc: Replaced treestore with liststore. I decided i didn't need a treeview after all...
+	* src/Dialog_About.cc: Replaced "Gnome Partition Editor based on libparted" with "Gnome Partition Editor"
+	* src/xfs.cc: fixed small error with creation of xfs filesystems (adrighem)
+
 2004-12-17 Bart Hakvoort  <gparted@users.sf.net>
 
 	* include/GParted_Core.h,
